2013-05-16  Cary Coutant  <ccoutant@google.com>

	* ecoff.c (ecoff_link_check_archive_element): Add initializers for
	external_ext_size and esize.

2013-05-16  Tristan Gingold  <gingold@adacore.com>

	* coff-rs6000.c (_bfd_xcoff_reloc_type_lookup): Handle BFD_RELOC_16.
	* coff64-rs6000.c (xcoff64_reloc_type_lookup): Likewise.

2013-05-15  Andreas Schwab  <schwab@suse.de>

	* elf64-aarch64.c (elf_backend_default_execstack): Define to 0.

2013-05-10  Joel Brobecker  <brobecker@adacore.com>

	* coffcode.h (styp_to_sec_flags) [RS6000COFF_C]: Add handling
	of STYP_EXCEPT, STYP_LOADER and STYP_TYPCHK sections.

2013-05-09  Joel Brobecker  <brobecker@adacore.com>

	* bfd.c (_bfd_default_error_handler): Replace use of putc
	by fputc.  Add comment explaining why.

2013-05-09  Alan Modra  <amodra@gmail.com>

	* elflink.c (elf_link_add_object_symbols): Don't omit reading
	of symbols when hashes already exist.

2013-05-07  Will Newton  <will.newton@linaro.org>

	* elf-ifunc.c (_bfd_elf_allocate_ifunc_dyn_relocs): Add a
	plt_header_size argument for ports where it differs from
	plt_entry_size.
	* elf-bfd.h: Likewise.
	* elf32-i386.c: Pass plt_header_size to
	_bfd_elf_allocate_ifunc_dyn_relocs.
	* elf64-x86-64.c: Likewise.

2013-05-07  Will Newton  <will.newton@linaro.org>

	* elf-ifunc.c (_bfd_elf_create_ifunc_dyn_reloc): Remove unused
	function.
	* elf-bfd.h: Likewise.

2013-05-06  Paul Brook  <paul@codesourcery.com>

	* elf64-mips.c (elf_mips_gnu_pcrel32): New.
	(bfd_elf64_bfd_reloc_type_lookup, bfd_elf64_bfd_reloc_name_lookup,
	mips_elf64_rtype_to_howto): Handle R_MIPS_PC32.
	* elfn32-mips.c (elf_mips_gnu_pcrel32): New.
	(bfd_elfn32_bfd_reloc_type_lookup, bfd_elfn32_bfd_reloc_name_lookup,
	mips_elfn32_rtype_to_howto): Handle R_MIPS_PC32.

2013-05-06  Alan Modra  <amodra@gmail.com>

	* elf64-ppc.c (opd_entry_value): Handle case where symbol
	hashes are not available.

2013-05-06  Alan Modra  <amodra@gmail.com>

	* elflink.c (elf_link_add_object_symbols): Don't save symbol