@@ -1,3 +1,8 @@
+2013-05-19  Maciej W. Rozycki  <macro@linux-mips.org>
+
+	* elf32-vax.c (elf_vax_adjust_dynamic_symbol): Convert K&R
+	function definition.
+
 2013-05-16  Cary Coutant  <ccoutant@google.com>
 
 	* ecoff.c (ecoff_link_check_archive_element): Add initializers for
